// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Podcast Component should render correctly 1`] = `
<div>
  <img
    alt="podcast cover"
    src="podcast image"
  />
  <div>
    podacstName
    <div />
  </div>
  <div>
    podcastDescription
  </div>
  <Connect(EpisodesList) />
</div>
`;

exports[`Test Podcast Component should render correctly when isFetching 1`] = `
<div>
  Loading...
</div>
`;

exports[`Test Podcast Component should render correctly when jwt is not an empty string 1`] = `
<div>
  <img
    alt="podcast cover"
    src="podcast image"
  />
  <div>
    podacstName
    <Connect(SubscribeButton) />
  </div>
  <div>
    podcastDescription
  </div>
  <Connect(EpisodesList) />
</div>
`;
